<resources>
    <string name="app_name">YouTube</string>
    <string name="profile">Profile</string>
    <string name="preview">Preview</string>
    <string name="viewed">Viewed</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="title">Title</string>
    <string name="_0">0</string>
    <string name="placeholder">Placeholder</string>
    <string name="channel">Channel</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="connection_error">Connection Error</string>
    <string name="sign_up">Sign up</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect!</string>

    <string name="just_now">Just now</string>
    <string name="x_seconds_ago">%1$d seconds ago</string>
    <string name="one_second_ago">1 second ago</string>
    <string name="x_minutes_ago">%1$d minutes ago</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="x_hours_ago">%1$d hours ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="x_days_ago">%1$d days ago</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="x_months_ago">%1$d months ago</string>
    <string name="one_month_ago">1 month ago</string>
    <string name="x_years_ago">%1$d years ago</string>
    <string name="one_year_ago">1 year ago</string>
    <string name="no_video_contents">No video contents</string>
    <string name="icon">Icon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="placeholder_video">%1$s/media/placeholder.mp4</string>
    <string name="button_decorative_placeholder">Settings page not yet created. The button is just decorative!</string>
    <string name="brand_sub_text">Enjoy the videos and music you love, upload original content, and share it all with friends, family, and the world on YouTube</string>
    <string name="terms_sub_text">By clicking and creating account you agree to</string>
    <string name="terms_sub_text_link">YouTube\'s Terms of Service</string>
    <string name="you_do_not_have_account_text">You don\'t have an account?</string>
    <string name="create_one_text">Create one!</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="visibility">Visibility</string>
    <string name="create_new_account_now_text">Create new account now! Please read our privacy policy below the form clicking the link</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="successfully_signed_in_text">Successfully signed in!, Please use provided data to log in!</string>
</resources>