...
        this.submitButtonState = SSButtonState.LOADING
        this.message = ""
    }

    private fun dataValidate(): String {
        if (TextUtils.isEmpty(firstName.text))
            return "Please enter first name"
        if (TextUtils.isEmpty(lastName.text))
            return "Please enter last name"
        if (TextUtils.isEmpty(email.text))
            return "Please enter email address"
        if (!android.util.Patterns.EMAIL_ADDRESS.matcher(email.text).matches())
            return "Please enter valid email address"
        if (TextUtils.isEmpty(password.text))
            return "Please enter password"
        if (password.text.length < 8)
            return "Password length must be more than 8"
...
